--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<p class="text-title-company">Synapse</p>
 				</div>
 				<div class="col">
-					<img src="assets/govtech-logo-blue.svg" alt="Company Logo">
+					<img src="SYNAPSE LOGO.001.jpeg" alt="Company Logo">
 				</div>
 			</div>
 		</div>
