--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.google.com/maps/place/Alameda+Vicente+Pinzon,+54+-+Vila+Ol%C3%ADmpia,+S%C3%A3o+Paulo+-+SP,+04547-130/@-23.5966452,-46.6890969,17z/data=!3m1!4b1!4m5!3m4!1s0x94ce5748e55dae6b:0x3c48a6ba1a391cbd!8m2!3d-23.5966452!4d-46.6869082">
+		<a href="https://www.google.com/maps/place/R.+Gomes+de+Carvalho,+911+-+Vila+Ol%C3%ADmpia,+S%C3%A3o+Paulo+-+SP,+04547-003/@-23.598826,-46.6845312,17z/data=!3m1!4b1!4m5!3m4!1s0x94ce574dd1c37cf5:0x3d1a74952d6ddb2b!8m2!3d-23.598826!4d-46.6823425">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-address.svg" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">Al Vicente Pinzon 54</p>
+						<p class="text-detail">Rua Gomes de Carvalho 911</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
